--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,17 +2,138 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
+             xmlns:templates="clr-namespace:ShoppingList.Templates"
              x:DataType="viewmodel:ShoppingListViewModel"
              x:Class="ShoppingList.MainPage"
              Title="{Binding Title}">
 
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <DataTemplate x:Key="DefaultShopItem">
+                <SwipeView>
+                    <SwipeView.RightItems>
+                        <SwipeItems Mode="Execute">
+                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=DeteleShopItemCommand}"
+                                               CommandParameter="{Binding .}">
+                                <StackLayout Background="Red"
+                                                 WidthRequest="2000">
+                                    <Label Text="Delete"
+                                               TextColor="White"
+                                               HorizontalOptions="End"
+                                               Margin="10,0"
+                                               VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+                            </SwipeItemView>
+                        </SwipeItems>
+                    </SwipeView.RightItems>
+                    <SwipeView.LeftItems>
+                        <SwipeItems Mode="Execute">
+                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=CheckOffShopItemCommand}"
+                                               CommandParameter="{Binding .}">
+                                <StackLayout Background="Green"
+                                                 WidthRequest="2000">
+                                    <Label Text="Check off"
+                                               TextColor="White"
+                                               HorizontalOptions="Start"
+                                               Margin="10,0"
+                                               VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+                            </SwipeItemView>
+                        </SwipeItems>
+                    </SwipeView.LeftItems>
+                    <Grid >
+                        <Frame>
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer 
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=TapCommand}"
+                                        CommandParameter="{Binding .}"/>
+                            </Frame.GestureRecognizers>
+                            <Grid>
+                                <Label Text="{Binding Name}"/>
+                                <HorizontalStackLayout HorizontalOptions="End" Spacing="5">
+                                    <Label Text="{Binding Amount}"/>
+                                    <Label Text="{Binding Unit}"/>
+                                </HorizontalStackLayout>
+                            </Grid>
+
+                        </Frame>
+
+                        <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
+                    </Grid>
+                </SwipeView>
+            </DataTemplate>
+            
+            <DataTemplate x:Key="CheckedOffShopItem">
+                <SwipeView>
+                    <SwipeView.RightItems>
+                        <SwipeItems Mode="Execute">
+                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=DeteleShopItemCommand}"
+                                               CommandParameter="{Binding .}">
+                                <StackLayout Background="Red"
+                                                 WidthRequest="2000">
+                                    <Label Text="Delete"
+                                               TextColor="White"
+                                               HorizontalOptions="End"
+                                               Margin="10,0"
+                                               VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+                            </SwipeItemView>
+                        </SwipeItems>
+                    </SwipeView.RightItems>
+                    <SwipeView.LeftItems>
+                        <SwipeItems Mode="Execute">
+                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=CheckOffShopItemCommand}"
+                                               CommandParameter="{Binding .}">
+                                <StackLayout Background="Green"
+                                                 WidthRequest="2000">
+                                    <Label Text="Check off"
+                                               TextColor="White"
+                                               HorizontalOptions="Start"
+                                               Margin="10,0"
+                                               VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+                            </SwipeItemView>
+                        </SwipeItems>
+                    </SwipeView.LeftItems>
+                    <Grid >
+                        <Frame BackgroundColor="LightGray">
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer 
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=TapCommand}"
+                                        CommandParameter="{Binding .}"/>
+                            </Frame.GestureRecognizers>
+                            <Grid>
+                                <Label Text="{Binding Name}"/>
+                                <HorizontalStackLayout HorizontalOptions="End" Spacing="5">
+                                    <Label Text="{Binding Amount}"/>
+                                    <Label Text="{Binding Unit}"/>
+                                </HorizontalStackLayout>
+                            </Grid>
+
+                        </Frame>
+                    </Grid>
+                </SwipeView>
+            </DataTemplate>
+
+            <templates:ShopItemTemplateSelector x:Key="ShopItemSelector" 
+                                                DefaultShopItemTemplate="{StaticResource DefaultShopItem}"
+                                                CheckedOffShopItemTemplate="{StaticResource CheckedOffShopItem}"/>
+
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    
     <Grid RowDefinitions="Auto, *"
           ColumnDefinitions="3*, 1*"
           Padding="10"
           ColumnSpacing="10">
 
         <Entry Placeholder="Enter item to buy"
-               Text="{Binding Name}"/>
+               VerticalOptions="Center"
+               Text="{Binding Name}">
+            <Entry.Effects>
+                
+            </Entry.Effects>
+        </Entry>
 
         <Button Text="Add"
                 Margin="10"
@@ -21,10 +142,11 @@
 
         <CollectionView Grid.Row="1" Grid.ColumnSpan="2"
                         ItemsSource="{Binding ShopItems}"
-                        SelectionMode="None">
-            <CollectionView.ItemTemplate>
+                        SelectionMode="None"
+                        ItemTemplate="{DynamicResource ShopItemSelector}">
+            <!--<CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="{x:Type viewmodel:ShoppingListViewModel}">
-                    <SwipeView Threshold="0">
+                    <SwipeView>
                         <SwipeView.RightItems>
                             <SwipeItems Mode="Execute">
                                 <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=DeteleShopItemCommand}"
@@ -76,7 +198,7 @@
                         </Grid>
                     </SwipeView>
                 </DataTemplate>
-            </CollectionView.ItemTemplate>
+            </CollectionView.ItemTemplate>-->
         </CollectionView>
     </Grid>
 
