--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
              xmlns:templates="clr-namespace:ShoppingList.Templates"
+             xmlns:effects="clr-namespace:ShoppingList.Effects"
              x:DataType="viewmodel:ShoppingListViewModel"
              x:Class="ShoppingList.MainPage"
              Title="{Binding Title}">
@@ -131,7 +132,7 @@
                VerticalOptions="Center"
                Text="{Binding Name}">
             <Entry.Effects>
-                
+                <effects:RemoveBorderEffect/>
             </Entry.Effects>
         </Entry>
 
