--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -144,63 +144,8 @@
         <CollectionView Grid.Row="1" Grid.ColumnSpan="2"
                         ItemsSource="{Binding ShopItems}"
                         SelectionMode="None"
-                        ItemTemplate="{DynamicResource ShopItemSelector}">
-            <!--<CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="{x:Type viewmodel:ShoppingListViewModel}">
-                    <SwipeView>
-                        <SwipeView.RightItems>
-                            <SwipeItems Mode="Execute">
-                                <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=DeteleShopItemCommand}"
-                                               CommandParameter="{Binding .}">
-                                    <StackLayout Background="Red"
-                                                 WidthRequest="2000">
-                                        <Label Text="Delete"
-                                               TextColor="White"
-                                               HorizontalOptions="End"
-                                               Margin="10,0"
-                                               VerticalOptions="CenterAndExpand"/>
-                                    </StackLayout>
-                                </SwipeItemView>
-                            </SwipeItems>
-                        </SwipeView.RightItems>
-                        <SwipeView.LeftItems>
-                            <SwipeItems Mode="Execute">
-                                <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=CheckOffShopItemCommand}"
-                                               CommandParameter="{Binding .}">
-                                    <StackLayout Background="Green"
-                                                 WidthRequest="2000">
-                                        <Label Text="Check off"
-                                               TextColor="White"
-                                               HorizontalOptions="Start"
-                                               Margin="10,0"
-                                               VerticalOptions="CenterAndExpand"/>
-                                    </StackLayout>
-                                </SwipeItemView>
-                            </SwipeItems>
-                        </SwipeView.LeftItems>
-                        <Grid >
-                            <Frame>
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer 
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=TapCommand}"
-                                        CommandParameter="{Binding .}"/>
-                                </Frame.GestureRecognizers>
-                                <Grid>
-                                    <Label Text="{Binding Name}"/>
-                                    <HorizontalStackLayout HorizontalOptions="End" Spacing="5">
-                                        <Label Text="{Binding Amount}"/>
-                                        <Label Text="{Binding Unit}"/>
-                                    </HorizontalStackLayout>
-                                </Grid>
-                              
-                            </Frame>
-                            
-                            <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
-                        </Grid>
-                    </SwipeView>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>-->
-        </CollectionView>
+                        ItemTemplate="{DynamicResource ShopItemSelector}" />
+
     </Grid>
 
 </ContentPage>
