--- a/App.xaml
+++ b/App.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ShoppingList"
              xmlns:converters="clr-namespace:ShoppingList.Converters"
+             xmlns:view="clr-namespace:ShoppingList.Views"
+             xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
              x:Class="ShoppingList.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -10,7 +12,8 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            
+
+            <!--Converters-->
             <converters:NumberToTextConverter x:Key="NumberToTextConverter"/>
             <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
             <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
