--- a/Views/RecipeDetailPage.xaml
+++ b/Views/RecipeDetailPage.xaml
@@ -8,26 +8,32 @@
     Title="RecipeDetailView"
     x:DataType="viewmodel:RecipeDetailViewModel"
     Shell.TabBarIsVisible="False">
-    <Grid RowDefinitions="auto,auto,*">
+    
+    <Grid RowDefinitions="auto,auto,auto,auto,*">
         <HorizontalStackLayout>
             <Button
                 Margin="10"
-                Command="{Binding UpdateCommand}"
-                Text="Update"/>
-            
+                IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
+                Command="{Binding UpdateRecipeCommand}"
+                Text="Update Recipe" />
+
+           <Button
+                Margin="10"
+                IsVisible="{Binding IsNewRecipe}"
+                Command="{Binding AddRecipeCommand}"
+                Text="Create Recipe" />
+
             <Button
                 Grid.ColumnSpan="2"
                 Margin="10"
-                Text="Cancel"/>
-            
+                Command="{Binding CancelCommand}"
+                Text="Go back" />
         </HorizontalStackLayout>
-        <VerticalStackLayout
-            Grid.Row="1"
-            Margin="10">
+        
+        <VerticalStackLayout Grid.Row="1" Margin="10">
             <Entry
-                Background="Black"
                 Placeholder="Recipe name"
-                Text="{Binding Name}"
+                Text="{Binding RecipeName}"
                 VerticalOptions="Center">
                 <Entry.Effects>
                     <effects:RemoveBorderEffect />
@@ -36,7 +42,7 @@
 
             <Editor
                 AutoSize="TextChanges"
-                MaximumHeightRequest="200"
+                MaximumHeightRequest="150"
                 Placeholder="Description"
                 Text="{Binding Description}"
                 VerticalOptions="Center">
@@ -46,6 +52,107 @@
             </Editor>
 
             <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
+        </VerticalStackLayout>
+
+        <Grid
+            IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
+            Grid.Row="2"
+            Padding="10,0"
+            ColumnDefinitions="*,50,50"
+            ColumnSpacing="10"
+            RowDefinitions="auto,auto">
+            <Entry
+                Placeholder="Enter ingredient"
+                Text="{Binding Name}"
+                VerticalOptions="Center">
+                <Entry.Effects>
+                    <effects:RemoveBorderEffect />
+                </Entry.Effects>
+            </Entry>
+
+            <Entry
+                Grid.Column="1"
+                HorizontalOptions="End"
+                Keyboard="Numeric"
+                Placeholder="Amount"
+                Text="{Binding Amount, Converter={StaticResource NumberToTextConverter}}"
+                VerticalOptions="Center">
+                <Entry.Effects>
+                    <effects:RemoveBorderEffect />
+                </Entry.Effects>
+            </Entry>
+
+            <Entry
+                Grid.Column="2"
+                HorizontalOptions="End"
+                Placeholder="Unit"
+                Text="{Binding Unit}"
+                VerticalOptions="Center">
+                <Entry.Effects>
+                    <effects:RemoveBorderEffect />
+                </Entry.Effects>
+            </Entry>
+        </Grid>
+
+        <Grid Grid.Row="3" RowDefinitions="*,*" ColumnDefinitions="*,*">
+            <Button
+                Grid.Row="1"
+                Margin="10"
+                Command="{Binding UpdateIngredientCommand}"
+                IsVisible="{Binding IsUpdatingItem}"
+                Text="Update" />
+
+            <Button
+                Grid.Row="1"
+                Margin="10"
+                Command="{Binding AddIngredientCommand}"
+                IsVisible="{Binding IsAddingItem}"
+                Text="Add Ingredient" />
+
+            <Button
+                Grid.Row="1"
+                Grid.Column="1"
+                Grid.ColumnSpan="2"
+                Margin="10"
+                Command="{Binding ExitEditModeCommand}"
+                IsVisible="{Binding IsAnyEntryFilled}"
+                Text="Cancel" />
+        </Grid>
+
+        <VerticalStackLayout
+            Grid.Row="4"
+            Grid.ColumnSpan="2"
+            Margin="10">
+            <CollectionView
+                EmptyView="No Ingredients"
+                ItemsSource="{Binding Ingredients}"
+                SelectedItem="{Binding SelectedIngredient}"
+                SelectionMode="Single">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <ContentView>
+                            <Grid>
+                                <Frame>
+                                    <Frame.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipeDetailViewModel}}, Path=TapCommand}" CommandParameter="{Binding .}" />
+                                    </Frame.GestureRecognizers>
+                                    <Grid>
+                                        <Label Text="{Binding Name}" />
+
+                                        <HorizontalStackLayout HorizontalOptions="End" Spacing="5" >
+                                            <Label Text="{Binding Amount}" />
+                                            <Label Text="{Binding Unit}" />
+                                        </HorizontalStackLayout>
+                                    </Grid>
+                                    
+                                </Frame>
+
+                                <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
+                            </Grid>
+                        </ContentView>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </VerticalStackLayout>
     </Grid>
 </ContentPage>
