Delete recipe and ingredients

--- a/Views/RecipeDetailPage.xaml
+++ b/Views/RecipeDetailPage.xaml
@@ -130,7 +130,21 @@
                 SelectionMode="Single">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <ContentView>
+                        <SwipeView>
+                            <SwipeView.RightItems>
+                                <SwipeItems Mode="Execute">
+                                    <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipeDetailViewModel}}, Path=DeleteIngredientCommand}" CommandParameter="{Binding .}">
+                                        <StackLayout Background="Red" WidthRequest="2000">
+                                            <Label
+                                        Margin="10,0"
+                                        HorizontalOptions="End"
+                                        Text="Delete"
+                                        TextColor="White"
+                                        VerticalOptions="CenterAndExpand" />
+                                        </StackLayout>
+                                    </SwipeItemView>
+                                </SwipeItems>
+                            </SwipeView.RightItems>
                             <Grid>
                                 <Frame>
                                     <Frame.GestureRecognizers>
@@ -144,12 +158,13 @@
                                             <Label Text="{Binding Unit}" />
                                         </HorizontalStackLayout>
                                     </Grid>
-                                    
+
                                 </Frame>
 
                                 <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
                             </Grid>
-                        </ContentView>
+                        </SwipeView>
+                        
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
