--- a/Views/RecipesPage.xaml
+++ b/Views/RecipesPage.xaml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:effects="clr-namespace:ShoppingList.Effects"
-             xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
-             x:Class="ShoppingList.Views.RecipesPage"
-             Title="{Binding Title}"
-             x:DataType="viewmodel:RecipesViewModel">
+<ContentPage
+    x:Class="ShoppingList.Views.RecipesPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:effects="clr-namespace:ShoppingList.Effects"
+    xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
+    Title="{Binding Title}"
+    x:DataType="viewmodel:RecipesViewModel">
     <Grid
         Padding="10"
         ColumnDefinitions="*,*"
         ColumnSpacing="10"
         RowDefinitions="Auto, *">
 
-        <Button
-            Margin="10"
-            Text="Pick random recipe" />
+        <Button Margin="10" Text="Pick random recipe" />
 
         <Button
             Grid.Column="1"
@@ -25,24 +24,52 @@
         <CollectionView
             Grid.Row="1"
             Grid.ColumnSpan="3"
-            ItemsSource="{Binding Recipes}"
             EmptyView="No recipes"
-            SelectionMode="Single" >
+            ItemsSource="{Binding Recipes}"
+            SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <ContentView>
+                    <SwipeView>
+                        <SwipeView.RightItems>
+                            <SwipeItems Mode="Execute">
+                                <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=DeleteRecipeCommand}" CommandParameter="{Binding .}">
+                                    <StackLayout Background="Red" WidthRequest="2000">
+                                        <Label
+                                            Margin="10,0"
+                                            HorizontalOptions="End"
+                                            Text="Delete"
+                                            TextColor="White"
+                                            VerticalOptions="CenterAndExpand" />
+                                    </StackLayout>
+                                </SwipeItemView>
+                            </SwipeItems>
+                        </SwipeView.RightItems>
+                        <SwipeView.LeftItems>
+                            <SwipeItems Mode="Execute">
+                                <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=IngredientsToShoppingListCommand}" CommandParameter="{Binding .}">
+                                    <StackLayout Background="Green" WidthRequest="2000">
+                                        <Label
+                                            Margin="10,0"
+                                            HorizontalOptions="Start"
+                                            Text="Check off"
+                                            TextColor="White"
+                                            VerticalOptions="CenterAndExpand" />
+                                    </StackLayout>
+                                </SwipeItemView>
+                            </SwipeItems>
+                        </SwipeView.LeftItems>
                         <Grid>
                             <Frame>
                                 <Frame.GestureRecognizers>
                                     <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=UpdateRecipeCommand}" CommandParameter="{Binding .}" />
                                 </Frame.GestureRecognizers>
-                                
+
                                 <Label Text="{Binding Name}" />
                             </Frame>
 
                             <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
                         </Grid>
-                    </ContentView>
+                    </SwipeView>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
