--- a/Views/RecipesPage.xaml
+++ b/Views/RecipesPage.xaml
@@ -13,9 +13,10 @@
         ColumnSpacing="10"
         RowDefinitions="Auto, *">
 
-        <Button Margin="10" 
-                Command="{Binding GoToRandomRecipeCommand}"
-                Text="Pick random recipe" />
+        <Button
+            Margin="10"
+            Command="{Binding GoToRandomRecipeCommand}"
+            Text="Pick random recipe" />
 
         <Button
             Grid.Column="1"
@@ -53,7 +54,7 @@
                                         <Label
                                             Margin="10,0"
                                             HorizontalOptions="Start"
-                                            Text="Check off"
+                                            Text="Add to shopping list"
                                             TextColor="White"
                                             VerticalOptions="CenterAndExpand" />
                                     </StackLayout>
