--- a/Views/RecipeDetailPage.xaml
+++ b/Views/RecipeDetailPage.xaml
@@ -5,32 +5,32 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:effects="clr-namespace:ShoppingList.Effects"
     xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
+    Title="{Binding Title}"
     x:DataType="viewmodel:RecipeDetailViewModel"
     Shell.TabBarIsVisible="False">
-    
+
     <Grid RowDefinitions="auto,auto,auto,auto,*">
-        <Grid
-            ColumnDefinitions="*,*">
+        <Grid ColumnDefinitions="*,*">
             <Button
                 Margin="10"
-                IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
                 Command="{Binding UpdateRecipeCommand}"
+                IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
                 Text="Update Recipe" />
 
-           <Button
+            <Button
                 Margin="10"
-                IsVisible="{Binding IsNewRecipe}"
                 Command="{Binding AddRecipeCommand}"
+                IsVisible="{Binding IsNewRecipe}"
                 Text="Create Recipe" />
 
             <Button
                 Grid.Column="1"
                 Margin="10"
-                IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
                 Command="{Binding IngredientsToShoppingListCommand}"
+                IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
                 Text="Add to shopping list" />
         </Grid>
-        
+
         <VerticalStackLayout Grid.Row="1" Margin="10">
             <Entry
                 Placeholder="Recipe name"
@@ -56,11 +56,11 @@
         </VerticalStackLayout>
 
         <Grid
-            IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
             Grid.Row="2"
             Padding="10,0"
             ColumnDefinitions="*,50,50"
             ColumnSpacing="10"
+            IsVisible="{Binding IsNewRecipe, Converter={StaticResource InverseBooleanConverter}}"
             RowDefinitions="auto,auto">
             <Entry
                 Placeholder="Enter ingredient"
@@ -95,7 +95,10 @@
             </Entry>
         </Grid>
 
-        <Grid Grid.Row="3" RowDefinitions="*,*" ColumnDefinitions="*,*">
+        <Grid
+            Grid.Row="3"
+            ColumnDefinitions="*,*"
+            RowDefinitions="*,*">
             <Button
                 Grid.Row="1"
                 Margin="10"
@@ -137,11 +140,11 @@
                                     <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipeDetailViewModel}}, Path=DeleteIngredientCommand}" CommandParameter="{Binding .}">
                                         <StackLayout Background="Red" WidthRequest="2000">
                                             <Label
-                                        Margin="10,0"
-                                        HorizontalOptions="End"
-                                        Text="Delete"
-                                        TextColor="White"
-                                        VerticalOptions="CenterAndExpand" />
+                                                Margin="10,0"
+                                                HorizontalOptions="End"
+                                                Text="Delete"
+                                                TextColor="White"
+                                                VerticalOptions="CenterAndExpand" />
                                         </StackLayout>
                                     </SwipeItemView>
                                 </SwipeItems>
@@ -154,7 +157,7 @@
                                     <Grid>
                                         <Label Text="{Binding Name}" />
 
-                                        <HorizontalStackLayout HorizontalOptions="End" Spacing="5" >
+                                        <HorizontalStackLayout HorizontalOptions="End" Spacing="5">
                                             <Label Text="{Binding Amount}" />
                                             <Label Text="{Binding Unit}" />
                                         </HorizontalStackLayout>
@@ -165,7 +168,7 @@
                                 <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
                             </Grid>
                         </SwipeView>
-                        
+
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
