--- a/Views/ShoppingListPage.xaml
+++ b/Views/ShoppingListPage.xaml
@@ -6,6 +6,7 @@
     xmlns:effects="clr-namespace:ShoppingList.Effects"
     xmlns:templates="clr-namespace:ShoppingList.Templates"
     xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
+    xmlns:components="clr-namespace:ShoppingList.CustomComponents"
     Title="{Binding Title}"
     x:DataType="viewmodel:ShoppingListViewModel">
 
@@ -16,45 +17,23 @@
                     <SwipeView.RightItems>
                         <SwipeItems Mode="Execute">
                             <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=DeleteShopItemCommand}" CommandParameter="{Binding .}">
-                                <StackLayout Background="Red" WidthRequest="2000">
-                                    <Label
-                                        Margin="10,0"
-                                        HorizontalOptions="End"
-                                        Text="Delete"
-                                        TextColor="White"
-                                        VerticalOptions="CenterAndExpand" />
-                                </StackLayout>
+                                <components:CustomSwipeItem SwipeBackground="Red" SwipeText="Delete" SwipeHorizontalOptions="End"/>
                             </SwipeItemView>
                         </SwipeItems>
                     </SwipeView.RightItems>
                     <SwipeView.LeftItems>
                         <SwipeItems Mode="Execute">
                             <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=CheckOffShopItemCommand}" CommandParameter="{Binding .}">
-                                <StackLayout Background="Green" WidthRequest="2000">
-                                    <Label
-                                        Margin="10,0"
-                                        HorizontalOptions="Start"
-                                        Text="Check off"
-                                        TextColor="White"
-                                        VerticalOptions="CenterAndExpand" />
-                                </StackLayout>
+                                <components:CustomSwipeItem SwipeBackground="Green" SwipeText="Check off" SwipeHorizontalOptions="Start"/>
                             </SwipeItemView>
                         </SwipeItems>
                     </SwipeView.LeftItems>
                     <Grid>
-                        <Frame>
-                            <Frame.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=TapCommand}" CommandParameter="{Binding .}" />
-                            </Frame.GestureRecognizers>
-                            <Grid>
-                                <Label Text="{Binding Name}" />
-                                <HorizontalStackLayout HorizontalOptions="End" Spacing="5">
-                                    <Label Text="{Binding Amount}" />
-                                    <Label Text="{Binding Unit}" />
-                                </HorizontalStackLayout>
-                            </Grid>
-                            
-                        </Frame>
+                        <components:ItemCard TapCommand="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=TapCommand}"
+                                                 TapCommandParameter="{Binding .}"
+                                                 ItemName="{Binding Name}"
+                                                 ItemAmount="{Binding Amount}"
+                                                 ItemUnit="{Binding Unit}"/>
 
                         <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
                     </Grid>
@@ -66,45 +45,24 @@
                     <SwipeView.RightItems>
                         <SwipeItems Mode="Execute">
                             <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=DeleteShopItemCommand}" CommandParameter="{Binding .}">
-                                <StackLayout Background="Red" WidthRequest="2000">
-                                    <Label
-                                        Margin="10,0"
-                                        HorizontalOptions="End"
-                                        Text="Delete"
-                                        TextColor="White"
-                                        VerticalOptions="CenterAndExpand" />
-                                </StackLayout>
+                                <components:CustomSwipeItem SwipeBackground="Red" SwipeText="Delete" SwipeHorizontalOptions="End"/>
                             </SwipeItemView>
                         </SwipeItems>
                     </SwipeView.RightItems>
                     <SwipeView.LeftItems>
                         <SwipeItems Mode="Execute">
                             <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=CheckOffShopItemCommand}" CommandParameter="{Binding .}">
-                                <StackLayout Background="Green" WidthRequest="2000">
-                                    <Label
-                                        Margin="10,0"
-                                        HorizontalOptions="Start"
-                                        Text="Check off"
-                                        TextColor="White"
-                                        VerticalOptions="CenterAndExpand" />
-                                </StackLayout>
+                                <components:CustomSwipeItem SwipeBackground="Green" SwipeText="Check off" SwipeHorizontalOptions="Start"/>
                             </SwipeItemView>
                         </SwipeItems>
                     </SwipeView.LeftItems>
                     <Grid>
-                        <Frame BackgroundColor="LightGray">
-                            <Frame.GestureRecognizers>
-                                <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=TapCommand}" CommandParameter="{Binding .}" />
-                            </Frame.GestureRecognizers>
-                            <Grid>
-                                <Label Text="{Binding Name}" />
-                                <HorizontalStackLayout HorizontalOptions="End" Spacing="5">
-                                    <Label Text="{Binding Amount}" />
-                                    <Label Text="{Binding Unit}" />
-                                </HorizontalStackLayout>
-                            </Grid>
-
-                        </Frame>
+                            <components:ItemCard TapCommand="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ShoppingListViewModel}}, Path=TapCommand}"
+                                                 TapCommandParameter="{Binding .}"
+                                                 ItemName="{Binding Name}"
+                                                 ItemAmount="{Binding Amount}"
+                                                 ItemUnit="{Binding Unit}"
+                                                 ItemBackgroundColor="LightGray"/>
                     </Grid>
                 </SwipeView>
             </DataTemplate>
@@ -117,7 +75,7 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <ContentPage.ToolbarItems>
+    <ContentPage.ToolbarItems >
         <ToolbarItem Text="Delete purchased items" Order="Secondary" Command="{Binding DeletePurchasedItemsCommand}"/>
         <ToolbarItem Text="Delete all items" Order="Secondary" Command="{Binding DeleteAllItemsCommand}"/>
     </ContentPage.ToolbarItems>
