--- a/CustomComponents/CustomSwipeItem.xaml
+++ b/CustomComponents/CustomSwipeItem.xaml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ShoppingList.CustomComponents.CustomSwipeItem"
-             x:Name="component">
+<ContentView
+    x:Class="ShoppingList.CustomComponents.CustomSwipeItem"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Name="component">
 
-    <StackLayout Background="{Binding SwipeBackground, Source={x:Reference component}}" 
-                 WidthRequest="2000">
+    <StackLayout
+        Background="{Binding SwipeBackground, Source={x:Reference component}}"
+        WidthRequest="2000">
         <Label
             Margin="10,0"
             HorizontalOptions="{Binding SwipeHorizontalOptions, Source={x:Reference component}}"
