--- a/Platforms/Windows/App.xaml
+++ b/Platforms/Windows/App.xaml
@@ -2,7 +2,5 @@
     x:Class="ShoppingList.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:ShoppingList.WinUI">
-
-</maui:MauiWinUIApplication>
+    xmlns:local="using:ShoppingList.WinUI"
+    xmlns:maui="using:Microsoft.Maui" />
