--- a/Views/RecipesPage.xaml
+++ b/Views/RecipesPage.xaml
@@ -3,9 +3,9 @@
     x:Class="ShoppingList.Views.RecipesPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:components="clr-namespace:ShoppingList.CustomComponents"
     xmlns:effects="clr-namespace:ShoppingList.Effects"
     xmlns:viewmodel="clr-namespace:ShoppingList.ViewModels"
-    xmlns:components="clr-namespace:ShoppingList.CustomComponents"
     Title="{Binding Title}"
     x:DataType="viewmodel:RecipesViewModel">
     <Grid
@@ -37,29 +37,43 @@
                     <SwipeView>
                         <SwipeView.RightItems>
                             <SwipeItems Mode="Execute">
-                                <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=DeleteRecipeCommand}" CommandParameter="{Binding .}">
-                                    <components:CustomSwipeItem SwipeBackground="Red" SwipeText="Delete" SwipeHorizontalOptions="End"/>
+                                <SwipeItemView
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=DeleteRecipeCommand}"
+                                    CommandParameter="{Binding .}">
+                                    <components:CustomSwipeItem
+                                        SwipeBackground="Red"
+                                        SwipeHorizontalOptions="End"
+                                        SwipeText="Delete" />
                                 </SwipeItemView>
                             </SwipeItems>
                         </SwipeView.RightItems>
                         <SwipeView.LeftItems>
                             <SwipeItems Mode="Execute">
-                                <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=IngredientsToShoppingListCommand}" CommandParameter="{Binding .}">
-                                    <components:CustomSwipeItem SwipeBackground="Green" SwipeText="Start" SwipeHorizontalOptions="Start"/>
+                                <SwipeItemView
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=IngredientsToShoppingListCommand}"
+                                    CommandParameter="{Binding .}">
+                                    <components:CustomSwipeItem
+                                        SwipeBackground="Green"
+                                        SwipeHorizontalOptions="Start"
+                                        SwipeText="Start" />
                                 </SwipeItemView>
                             </SwipeItems>
                         </SwipeView.LeftItems>
-                        
+
                         <Grid>
                             <Frame>
                                 <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=UpdateRecipeCommand}" CommandParameter="{Binding .}" />
+                                    <TapGestureRecognizer
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:RecipesViewModel}}, Path=UpdateRecipeCommand}"
+                                        CommandParameter="{Binding .}" />
                                 </Frame.GestureRecognizers>
 
                                 <Label Text="{Binding Name}" />
                             </Frame>
 
-                            <BoxView HeightRequest="1" VerticalOptions="EndAndExpand" />
+                            <BoxView
+                                HeightRequest="1"
+                                VerticalOptions="EndAndExpand" />
                         </Grid>
                     </SwipeView>
                 </DataTemplate>
